maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: ';' expected but '=' found.
  sx : Int = 0
           ^JediEscaper:4: error: ';' expected but '=' found.
  sy : Int = 0
           ^JediEscaper:5: error: ';' expected but '=' found.
  (sx, sy) = sortie()
           ^